<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rfcx guardian</string>
	
    <string name="menu_prefs">prefs</string>
    <string name="menu_reboot">reboot</string>
    <string name="menu_relaunch">relaunch</string>
    <string name="menu_screenshot">screenshot</string>
    <string name="menu_logcat">logcat</string>
    <string name="menu_sntp">sntp sync</string>
    <string name="menu_purge_checkins">purge checkins</string>
    
    
    <string-array name="true_or_false">
		<item>true</item>
		<item>false</item>
	</string-array>
	
    <string-array name="opus_or_flac">
		<item>opus</item>
		<item>flac</item>
	</string-array>

    <string-array name="tcp_or_tls">
		<item>tcp</item>
		<item>tls</item>
	</string-array>
	
    <string-array name="logcat_log_levels">
		<item>Error</item>
		<item>Warn</item>
		<item>Info</item>
		<item>Debug</item>
		<item>Verbose</item>
	</string-array>
	
    <string-array name="audio_sample_rate_labels">
		<item>8 kHz</item>
		<item>12 kHz</item>
		<item>16 kHz</item>
		<item>24 kHz</item>
		<item>48 kHz</item>
	</string-array>
	
    <string-array name="audio_sample_rate_values">
		<item>8000</item>
		<item>12000</item>
		<item>16000</item>
		<item>24000</item>
		<item>48000</item>
	</string-array>
	
    <string-array name="percent_labels">
		<item>90 %</item>
		<item>80 %</item>
		<item>70 %</item>
		<item>60 %</item>
		<item>50 %</item>
		<item>40 %</item>
		<item>30 %</item>
		<item>20 %</item>
		<item>10 %</item>
	</string-array>
	
    <string-array name="percent_values">
		<item>90</item>
		<item>80</item>
		<item>70</item>
		<item>60</item>
		<item>50</item>
		<item>40</item>
		<item>30</item>
		<item>20</item>
		<item>10</item>
	</string-array>
    
    <string-array name="audio_encode_bitrate_labels">
		<item>4 kbps</item>
		<item>8 kbps</item>
		<item>12 kbps</item>
		<item>16 kbps</item>
		<item>20 kbps</item>
		<item>24 kbps</item>
		<item>28 kbps</item>
		<item>32 kbps</item>
		<item>36 kbps</item>
		<item>40 kbps</item>
		<item>44 kbps</item>
		<item>48 kbps</item>
	</string-array>
	
    <string-array name="audio_encode_bitrate_values">
		<item>4096</item>
		<item>8192</item>
		<item>12288</item>
		<item>16384</item>
		<item>20480</item>
		<item>24576</item>
		<item>28672</item>
		<item>32768</item>
		<item>36864</item>
		<item>40960</item>
		<item>45056</item>
		<item>49152</item>
	</string-array>
    
    
</resources>
