<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_prefs"
        android:orderInCategory="1"
        android:title="@string/menu_prefs"
        />
    
    <item
        android:id="@+id/menu_reboot"
        android:orderInCategory="2"
        android:title="@string/menu_reboot"
        />
    
    <item
        android:id="@+id/menu_relaunch"
        android:orderInCategory="3"
        android:title="@string/menu_relaunch"
        />
    
    <item
        android:id="@+id/menu_screenshot"
        android:orderInCategory="4"
        android:title="@string/menu_screenshot"
        />
    
    <item
        android:id="@+id/menu_logcat"
        android:orderInCategory="5"
        android:title="@string/menu_logcat"
        />
    
    <item
        android:id="@+id/menu_sntp"
        android:orderInCategory="6"
        android:title="@string/menu_sntp"
        />
    
    <item
        android:id="@+id/menu_purge_checkins"
        android:orderInCategory="7"
        android:title="@string/menu_purge_checkins"
        />
    
</menu>